--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
-    "@vueuse/core": "^10.11.0",
+    "@vueuse/core": "^10.9.0",
     "@yyhhenry/element-extra": "^0.3.1",
-    "@yyhhenry/rust-result": "npm:@jsr/yyhhenry__rust-result@^0.2.9",
+    "@yyhhenry/rust-result": "^0.3.1",
     "element-plus": "^2.7.6",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
